src/scss/_wrapper.scss
.wrapper {
  @apply flex flex-1 flex-col transition-margin duration-300 ease-in-out lg:ml-72;

  &.expanded {
    @apply lg:ml-20;
  }

  .header {
    @apply flex h-16 w-full items-center bg-white drop-shadow-sm dark:bg-slate-800;
  }

  .content {
    @apply flex w-full flex-col overflow-y-auto;
    height: calc(100vh - 4rem);
  }

  .footer {
    @apply flex flex-wrap items-center justify-between py-5 px-6 text-slate-500;
  }
}

